metadata/force-app/main/default/objects/Technology__c/fields/Also_known_as__c.field-meta.xml
<CustomField>
    <fullName>Also_known_as__c</fullName>
    <inlineHelpText>Any other names the technology is known by. Include previous names through rebranding and acronyms.</inlineHelpText>
    <label>Also known as</label>
    <length>255</length>
    <type>Text</type>
</CustomField>