metadata/force-app/main/default/objects/Technology__c/fields/Child_Category__c.field-meta.xml
<CustomField>
    <fullName>Child_Category__c</fullName>
    <inlineHelpText>The child category of the technology platform enables in the ecosystem</inlineHelpText>
    <label>Child Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>Advocacy Loyalty &amp; Referrals</fullName>
            </value>
            <value>
                <fullName>Affiliate Marketing &amp; Management</fullName>
            </value>
            <value>
                <fullName>Agile &amp; Lean Management</fullName>
            </value>
            <value>
                <fullName>Audience/Marketing Data &amp; Data Enhancement</fullName>
            </value>
            <value>
                <fullName>Budgeting &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Business/Customer Intelligence &amp; Data Science</fullName>
            </value>
            <value>
                <fullName>Call Analytics &amp; Management</fullName>
            </value>
            <value>
                <fullName>Channel Partner &amp; Local Marketing</fullName>
            </value>
            <value>
                <fullName>CMS &amp; Web Experience Management</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Community &amp; Reviews</fullName>
            </value>
            <value>
                <fullName>Content Marketing</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Customer Data Platform</fullName>
            </value>
            <value>
                <fullName>Customer Experience Service &amp; Success</fullName>
            </value>
            <value>
                <fullName>DAM &amp; MRM &amp; PIM</fullName>
            </value>
            <value>
                <fullName>Dashboards &amp; Data Visualization</fullName>
            </value>
            <value>
                <fullName>Display &amp; Programmatic Advertising</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>eCommerce Marketing</fullName>
            </value>
            <value>
                <fullName>eCommerce Platforms &amp; Carts</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Events, Meetings &amp; Webinars</fullName>
            </value>
            <value>
                <fullName>Governance Compliance And Privacy</fullName>
            </value>
            <value>
                <fullName>Influencers</fullName>
            </value>
            <value>
                <fullName>Interactive Content</fullName>
            </value>
            <value>
                <fullName>Ipaas Cloud/Data Integration &amp; Tag Management</fullName>
            </value>
            <value>
                <fullName>Live Chat &amp; Chatbots</fullName>
            </value>
            <value>
                <fullName>Marketing Analytics Performance &amp; Attribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>