metadata/force-app/main/default/objects/Technology__c/fields/of_Integrations_available__c.field-meta.xml
<CustomField>
    <fullName>of_Integrations_available__c</fullName>
    <description>Number of integrations available for the technology</description>
    <inlineHelpText>Number of integrations available for the technology</inlineHelpText>
    <label># of Integrations available</label>
    <summaryForeignKey>Integration__c.Technology__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>