metadata/force-app/main/default/objects/Technology__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <inlineHelpText>The parent category of the technology platform enables in the ecosystem</inlineHelpText>
    <label>Parent Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commerce &amp; Sales</fullName>
            </value>
            <value>
                <fullName>Advertising &amp; Promotion</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Content &amp; Experience</fullName>
            </value>
            <value>
                <fullName>Social &amp; Relationships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>