metadata/force-app/main/default/objects/Technology__c/fields/Technology_Provider__c.field-meta.xml
<CustomField>
    <fullName>Technology_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The company that provides the technology platform</inlineHelpText>
    <label>Technology Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technologies</relationshipLabel>
    <relationshipName>Technologies</relationshipName>
    <type>Lookup</type>
</CustomField>