metadata/force-app/main/default/objects/Technology__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Category__c</columns>
    <columns>Child_Category__c</columns>
    <columns>Technology_Provider__c</columns>
    <columns>Source__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>